<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Robotics Scouting</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
 	<string name="gamesetup">Game Setup</string>
 	<string name="savegamesetup">Save</string>
 	<string name="cancelgamesetup">Cancel</string>
 	<string name="stats">Stats</string>
 	<string name="home">Home</string>
 	<string name="next">Next</string>
 	<string name="database">Send Stats to Database</string>
 	<string name="autoscreen">Autonomous Game Screen</string>
 	<string name="teloscreen">Teloperative Game Screen</string>
 	<string name="endscreen">End Game Screen</string>
 	<string name="game">Capture Game Stats</string>
 	<string name="settings">Settings</string>
 	<string name="teamnumber">Team Number:</string>
 	<string name="teamnumberhint">Input your team #</string>
 	<string name="teamname">Team Name:</string>
 	<string name="teamnamehint">Input your team name</string>
 	<string name="competition">Competition:</string>
 	<string name="match">Match:</string>
 	<string name="matchhint">Input match</string>
 	<string name="robot">Robot:</string>
 	<string name="robothint">Input robot number</string>
 	<string name="moveforward">Move Forward</string>
 	<string name="shootball">Shoot Ball</string>
 	<string name="hotgoal">Hot Goal</string>
 	<string name="comments">Comments</string>
 	<string name="addpoints">Add Points</string>
 	<string name="subpoints">Subtract Points</string>
</resources>
