<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/background"
     >    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"        
        android:orientation="vertical" 
        android:layout_centerInParent="true"
        android:background="@drawable/linearlayout_bg"
        >
        <Button
            android:id="@+id/btnMenuGameSetup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="4dp"
            android:background="@drawable/button_color_bg"
            android:text="@string/gamesetup" />
		<Button
            android:id="@+id/btnMenuGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="4dp"
            android:background="@drawable/button_color_bg"
            android:text="@string/game" />
		
		<Button
            android:id="@+id/btnMenuDatabase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="4dp"
            android:background="@drawable/button_color_bg"
            android:text="@string/database" />
		<Button
            android:id="@+id/btnMenuStats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="4dp"
            android:background="@drawable/button_color_bg"
            android:text="@string/stats" />
    </LinearLayout>

</RelativeLayout>